# caksm

./: .gitignore  CMakeLists.txt  README.md
docs/thesis/: Bibliography.bib  main.aux  main.tex  main.toc  tcd-msc-hpc-style.sty  tcd-msc-hpc.cls
include/: arnoldi.hpp  config.hpp  me_theta.hpp  pde_operators.hpp  solvers.hpp
scripts/: benchmark_plots.py  cache_roofline_plot.py  slurm_sweep_n31.sh  slurm_sweep_n61.sh  stream_sweep.sh  stream_sweep_plot.py  sweep_n31.sh  sweep_n61.sh
src/: arnoldi.cc  fma_loop.cpp  main.cpp  profiler.cpp  stream.c
tests/: test_arnoldi.cpp
